Added About Me section

--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
             </nav>
         <div class="avatar">
             <img src="./assets/images/IMG_4205.JPG">
-        </div>    
-
+        </div>   
     </header>
+
+    <section>
+        <h2>About Me</h2>
+        <p> I am a Lead Ophthalmic Technician with a Bachelors in Science and a Masters in Physiology. My goal is to take my 5+ years of experience in healthcare into the field of software development and data analytics. I will bestow new ideas and improvements for IT healthcare solutions to provide outstanding patient care and secure medical records. </p>
+        <img src="./assets/images/images.jpg">
+    </section>
+
     
 </body>
 </html>
