--- a/index.html
+++ b/index.html
@@ -26,8 +26,30 @@
 
     <section>
         <h2>About Me</h2>
-        <p> I am a Lead Ophthalmic Technician with a Bachelors in Science and a Masters in Physiology. My goal is to take my 5+ years of experience in healthcare into the field of software development and data analytics. I will bestow new ideas and improvements for IT healthcare solutions to provide outstanding patient care and secure medical records. </p>
-        <img src="./assets/images/images.jpg">
+            <p> I am a Lead Ophthalmic Technician with a Bachelors in Science and a Masters in Physiology. My goal is to take my 5+ years of experience in healthcare into the field of software development and data analytics. I will bestow new ideas and improvements for IT healthcare solutions to provide outstanding patient care and secure medical records. </p>
+            <img src="./assets/images/images.jpg">
+    </section>
+
+    <section>
+        <h2>Work</h2>
+            <h3>HTML/CSS Website</h3>
+                <img src="./assets/images/123456.webp">
+            <h3>Project-1</h3>
+                <img src="./assets/images/123456.webp">
+            <h3>Project-2</h3>
+                <img src="./assets/images/123456.webp">
+            <h3>Project-3</h3>
+                <img src="./assets/images/123456.webp">
+    </section>
+
+    <section>
+        <h2>Contact Me</h2>
+            <ul>
+                <li>Cell Phone Number: 770-878-1292</li>
+                <li>Email Address: torihendricks927@yahoo.com</li>
+                <li>LinkedIn: https://www.linkedin.com/in/victoria-hendricks-665772a3/</li>
+                <li>Github: https://github.com/torihendricks927</li>
+            </ul>
     </section>
 
     
