modified class and id elements

--- a/index.html
+++ b/index.html
@@ -12,46 +12,52 @@
 <body>
     <header>
         <h1>Victoria Hendricks</h1>
-            <nav class="menu">
+            <nav>
                 <ul>
-                 <li><a href="#">About Me</a></li>
-                 <li><a href="#">Work</a></li>
-                 <li><a href="#">Contact Me</a></li>
+                 <li><a href="#AboutMe">About Me</a></li>
+                 <li><a href="#Work">Work</a></li>
+                 <li><a href="#Contact">Contact Me</a></li>
                  </ul>
-            </nav>
-        <div class="avatar">
-            <img src="./assets/images/IMG_4205.JPG">
-        </div>   
+            </nav>  
+            <h2>"My motivation for all companies has been to be involved in something that would have a significant impact on the world." - Elon Musk</h2> 
     </header>
+    
+    <div>
+        <img class="avatar" src="./assets/images/IMG_4205.JPG">
+    </div> 
 
-    <section>
-        <h2>About Me</h2>
-            <p> I am a Lead Ophthalmic Technician with a Bachelors in Science and a Masters in Physiology. My goal is to take my 5+ years of experience in healthcare into the field of software development and data analytics. I will bestow new ideas and improvements for IT healthcare solutions to provide outstanding patient care and secure medical records. </p>
-            <img src="./assets/images/images.jpg">
+   
+
+    <section id="AboutMe" class="Box-1">
+        <h2>About Me</h2><br>
+            <p> I am a Lead Ophthalmic Technician with a Bachelors in Science and a Masters in Physiology. My goal is to take my 5+ years of experience in healthcare into the field of software development and data analytics. I will bestow new ideas and improvements for IT healthcare solutions to provide excelling patient care and secure medical records. </p>
     </section>
 
-    <section>
+    <br>
+
+    <section id="Work" class="Box-2">
         <h2>Work</h2>
-            <h3>HTML/CSS Website</h3>
-                <img src="./assets/images/123456.webp">
-            <h3>Project-1</h3>
-                <img src="./assets/images/123456.webp">
-            <h3>Project-2</h3>
-                <img src="./assets/images/123456.webp">
-            <h3>Project-3</h3>
-                <img src="./assets/images/123456.webp">
+            <h3>Project-1: HTML/CSS Website</h3>
+                <a href="https://github.com/torihendricks927/Hw-1-Code-Refactor-HTML-CSS"><img class="Work-1-img" alt="HTML-CSS" src="assets/images/Screen Shot 2022-03-13 at 7.03.50 PM.png"></a>
+            <h4>Project-2</h4>
+                <img class="placeholder" src="./assets/images/123456-1 copy.jpg">
+            <h4>Project-3</h4>
+                <img class="placeholder" src="./assets/images/123456-1 copy.jpg"> 
+            <h4>Project-4</h4>
+                <img class="placeholder" src="./assets/images/123456-1 copy.jpg"> 
     </section>
 
-    <section>
-        <h2>Contact Me</h2>
+    <br>
+
+    <section id="Contact" class="Box-3">
+        <h2>Contact Me</h2><br />
             <ul>
-                <li>Cell Phone Number: 770-878-1292</li>
-                <li>Email Address: torihendricks927@yahoo.com</li>
-                <li>LinkedIn: https://www.linkedin.com/in/victoria-hendricks-665772a3/</li>
-                <li>Github: https://github.com/torihendricks927</li>
+                <li>Cell Phone Number:770-878-1292</li>
+                <li>Email Address:torihendricks927@yahoo.com</li>
+                <li>LinkedIn: Victoria Hendricks</li>
+                <li>Github: torihendricks927</li>
             </ul>
     </section>
 
-    
 </body>
 </html>
