comments added for description of code

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
             <h2>"My motivation for all companies has been to be involved in something that would have a significant impact on the world." - Elon Musk</h2> 
     </header>
     
+    <!-- Insert my picture in separate class to allow absoloute position to single item  -->
     <div>
         <img class="avatar" src="./assets/images/IMG_4205.JPG">
     </div> 
 
-   
+   <!-- About me section -->
 
     <section id="AboutMe" class="Box-1">
         <h2>About Me</h2><br>
@@ -34,7 +35,7 @@
     </section>
 
     <br>
-
+<!-- Work section showing my portfolios -->
     <section id="Work" class="Box-2">
         <h2>Work</h2>
             <h3>Project-1: HTML/CSS Website</h3>
@@ -48,14 +49,14 @@
     </section>
 
     <br>
-
+<!-- Contact section for my profile  -->
     <section id="Contact" class="Box-3">
         <h2>Contact Me</h2><br />
             <ul>
                 <li>Cell Phone Number:770-878-1292</li>
                 <li>Email Address:torihendricks927@yahoo.com</li>
-                <li>LinkedIn: Victoria Hendricks</li>
-                <li>Github: torihendricks927</li>
+                <li><a href="https://www.linkedin.com/in/victoria-hendricks-665772a3/">LinkedIn</a></li>
+                <li><a href="https://github.com/torihendricks927">Github</a></li>
             </ul>
     </section>
 
