--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>Victoria Hendricks</h1>
             <nav>
                 <ul>
-                 <li><a href="#AboutMe">About Me</a></li>
-                 <li><a href="#Work">Work</a></li>
-                 <li><a href="#Contact">Contact Me</a></li>
+                 <li><a href="#AboutMe">About Me</a></li><br>
+                 <li><a href="#Work">Work</a></li><br>
+                 <li><a href="#Contact">Contact Me</a></li><br>
                  </ul>
             </nav>  
             <h2>"My motivation for all companies has been to be involved in something that would have a significant impact on the world." - Elon Musk</h2> 
